# confluence-mcp

./: .dockerignore  .env.example  .env.milvus.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  opencode.jsonc  pyproject.toml
src/confluence_mcp/: __init__.py  chunker.py  client.py  converter.py  embedder.py  extractor.py  processor.py  server.py  stats_attachments.py  sync_dify.py  sync_dify_workflow.py  sync_milvus.py
src/confluence_mcp/knowledge/: __init__.py  embedding_client.py  llm_chunker.py  milvus_client.py
src/confluence_server/: __init__.py  converter.py  processor.py  server.py
