[project]
name = "confluence-mcp"
version = "0.1.0"
description = "MCP server for Confluence - list spaces, crawl pages, convert to markdown"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "markdownify>=0.13",
    "beautifulsoup4>=4.12",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
