[project]
name = "bitu-confluence-mcp"
version = "0.1.0"
description = "MCP server for Confluence - list spaces, crawl pages, convert to markdown"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "markdownify>=0.13",
    "beautifulsoup4>=4.12",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "xmindparser>=2.0",
    "extract-msg>=0.55",
    "pymilvus",
    "langchain-text-splitters",
    "langchain-experimental",
    "requests",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
